# LumyINTP

./: README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
nodes/: intp.py
web/: intp.js
