[project]
name = "lumyintp"
description = "INT+ node for ComfyUI with control after generate style functionality for signal-controlled increment/decrement/randomize operations."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/Lumiyumi/LumyINTP"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Lumiyumi/LumyINTP/wiki"
"Bug Tracker" = "https://github.com/Lumiyumi/LumyINTP/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "LumyINTP"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

